force-app/main/default/objects/custom_create268__c/custom_create268__c.object-meta.xml
<CustomObject>
    <label>Custom created object268</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects268</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>