force-app/main/default/objects/custom_create268__c/fields/custom_create_268field567__c.field-meta.xml
<CustomField>
    <fullName>custom_create_268field567__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 268field567</label>
    <type>Checkbox</type>
</CustomField>